episod_1/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: "/zii"
            backend:
              serviceName: kube-zii-svc
              servicePort: 80
          - path: "/quu"
            backend:
              serviceName: kube-quu-svc
              servicePort: 80
